--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,3 @@
 PORT = 8081
+DB_NAME = "ecommerce"
+DB_URL = "mongodb+srv://bruno:nitro300597@cluster-coder.vm7i41d.mongodb.net/?retryWrites=true&w=majority"
