--- a/backend/package.json
+++ b/backend/package.json
@@ -15,7 +15,9 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongodb": "^5.1.0",
-    "mongoose": "^7.0.1"
+    "mongoose": "^7.0.1",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.21"
