--- a/backend/package.json
+++ b/backend/package.json
@@ -4,16 +4,20 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "dev": "nodemon src/server.js"
+    "dev": "nodemon src/server.js",
+    "test": "mocha src/tests/apiProducts.test.js",
+    "axiosTest": "node src/tests/axiosClient.js"
   },
   "type": "module",
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.3.4",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "mocha": "^10.2.0",
     "mongodb": "^5.1.0",
     "mongoose": "^7.0.1",
     "passport": "^0.6.0",
