--- a/backend/package.json
+++ b/backend/package.json
@@ -19,12 +19,12 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-graphql": "^0.12.0",
-    "graphql": "^16.6.0",
     "mocha": "^10.2.0",
     "mongodb": "^5.1.0",
     "mongoose": "^7.0.1",
     "passport": "^0.6.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "socket.io": "^4.6.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.21"
