--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "mocha": "^10.2.0",
     "mongodb": "^5.1.0",
     "mongoose": "^7.0.1",
+    "nodemailer": "^6.9.1",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "socket.io": "^4.6.1"
